Avoid `th:not([align])` and `td:not([align])`
Avoid `th:not([align])` and `td:not([align])`, because they have too hight specificity (0.1.1).

https://github.com/jgthms/minireset.css/issues/26

--- a/minireset.sass
+++ b/minireset.sass
@@ -75,5 +75,11 @@ table
 td,
 th
   padding: 0
-  &:not([align])
+  text-align: left
+
+  &[align=left]
     text-align: left
+  &[align=center]
+    text-align: center
+  &[align=right]
+    text-align: right
